# magx-project

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  test_magx.py
magx/: __init__.py  magx_explainer.py
magx/core/: __init__.py  base_explainer.py  model.py
magx/eval/: __init__.py  metrics.py
magx/examples/: titanic_logreg_demo.ipynb
magx/explainers/: __init__.py  global_permutation.py  local_lime.py
magx/utils/: __init__.py
magx/viz/: __init__.py  global_plots.py  local_plots.py
