[project]
name = "magx"
version = "0.1.0"
description = "Model-agnostic explainability toolkit with global & local methods"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="Mohammed Muqsith Ali Khan", email="muqsithali8@gmail.com" }
]
requires-python = ">=3.9"

# Dependencies
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
